// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`chatPalette > renders with as correctly 1`] = `
"<section data-slot="root" class="relative flex-1 flex flex-col min-h-0 min-w-0">
  <div data-slot="content" class="overflow-y-auto flex-1 flex flex-col py-3"></div>
  <!--v-if-->
</section>"
`;

exports[`chatPalette > renders with class correctly 1`] = `
"<div data-slot="root" class="relative flex-1 flex flex-col min-h-0 min-w-0 absolute">
  <div data-slot="content" class="overflow-y-auto flex-1 flex flex-col py-3"></div>
  <!--v-if-->
</div>"
`;

exports[`chatPalette > renders with default slot correctly 1`] = `
"<div data-slot="root" class="relative flex-1 flex flex-col min-h-0 min-w-0">
  <div data-slot="content" class="overflow-y-auto flex-1 flex flex-col py-3">Default slot</div>
  <!--v-if-->
</div>"
`;

exports[`chatPalette > renders with prompt slot correctly 1`] = `
"<div data-slot="root" class="relative flex-1 flex flex-col min-h-0 min-w-0">
  <div data-slot="content" class="overflow-y-auto flex-1 flex flex-col py-3"></div>Prompt slot
</div>"
`;

exports[`chatPalette > renders with ui correctly 1`] = `
"<div data-slot="root" class="relative flex-1 flex flex-col min-h-0 min-w-0">
  <div data-slot="content" class="overflow-y-auto flex-1 flex flex-col py-3"></div>
  <!--v-if-->
</div>"
`;
